[package]
name = "io"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
futures = "0.3.21"
rppal = "0.13.1"
rs_ws281x = "0.4.2"
# serialport = "4.2.0"
